# dash_flask

./: .env  .gitignore  .python-version  Procfile  README.md  config.py  env_Sample  main.py  pyproject.toml  requirements.txt  wsgi.py
application/: __init__.py  admin.py  models.py  urls.py
application/API/: external_API.py  internal_API.py
application/auth/: decorators.py  forms.py  routes.py
application/auth/templates/: change_password.jinja2  login.jinja2  privacy_policy.html  reset_password.html  signup.jinja2  verify.html
application/dashboard/: base.py  dashapp.py
application/dashboard/assets/: style.css
application/dashboard/callbacks/: base.py
application/dashboard/components/: navbar.py  navbar_new.py
application/dashboard/layout/: base.py
application/dashboard/layout/components/: modalPassword.py  navbar.py
application/dashboard/pages/: index.py  overview.py  stock_detail.py  stocks.py
application/dashboard/utils/: functions.py
application/data/: 02_Technologien.xlsx
application/data/processing/: dataProcessing.py  main.py
application/static/: style.css
application/static/css/: style.css
application/templates/: base.jinja2  messages.html
application/templates/admin/: base.html  custom_views.py  layout.html
instance/: database.db
