[tool.poetry]
name = "co2onboard"
version = "0.1.0"
description = ""
authors = ["Simon Unterbusch <simonunterbusch@unterbusch.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.16"
flask = "2.2.2"
flask-admin = "^1.6.1"
dash = "^2.9.3"
dash-mantine-components = "^0.12.1"
flask-redmail = "^0.3.0"
gunicorn = "^20.1.0"
pyjwt = "^2.6.0"
sqlalchemy = "^2.0.12"
pandas = "^2.0.1"
flask-login = "^0.6.2"
flask-sqlalchemy = "^3.0.3"
flask-session = "^0.4.1"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"
dash-iconify = "^0.1.2"
openpyxl = "^3.1.2"
wtforms = "^3.0.1"
flask-bootstrap = "^3.3.7.1"
dash-extensions = "^1.0.0"
dash-labs = "^1.2.0"
yahoo-finance = "^1.4.0"
requests-html = "^0.10.0"
requests = "^2.30.0"
yfinance = "^0.2.18"
html5lib = "^1.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
skip = "^0.1.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
